# public-company-graph

./: .env.sample  .gitattributes  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  QUICK_START.md  README.md  SCRIPT_CLEANUP_PLAN.md  SETUP_GUIDE.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
data/: candidate_competitor_spot_check.csv  domain.dump  er_ground_truth.csv  er_ground_truth_labeled.csv  er_spot_check_reviewed.csv  er_test.csv  er_train.csv  er_validation.csv
data/cache/: cache.db
docs/: ARCHITECTURE.md  BATCH_WRITE_PERFORMANCE.md  COMPANY_SIMILARITY_EXPANSION.md  COMPANY_SIMILARITY_SUMMARY.md  ENRICHMENT_STATUS_QUERIES.md  FAMOUS_COMPETITOR_PAIRS.md  GDS_ALGORITHM_COVERAGE.md  PIPELINE_COMPLETENESS_CHECK.md  README.md  SIMILARITY_BUG_ANALYSIS.md  VALIDATION.md  advanced_gds_features.md  entity_resolution_evaluation.md  gds_features.md  graph_schema.md  money_queries.md  research_enhancements.md
domain_status_graph/: __init__.py  cli.py  config.py  constants.py  logging.py  retry.py
domain_status_graph/company/: __init__.py  enrichment.py  queries.py  similarity.py
domain_status_graph/embeddings/: __init__.py  cache.py  create.py  openai_client.py
domain_status_graph/gds/: __init__.py  company_similarity.py  company_tech.py  tech_adoption.py  tech_affinity.py  utils.py
scripts/: analyze_company_communities.py  bootstrap_graph.py  cleanup_git_history.sh  collect_domains.py  collect_domains_parallel.py  compute_advanced_gds_features.py  compute_company_communities.py  compute_company_similarity.py  compute_company_similarity_via_domains.py  compute_domain_similarity.py  compute_gds_features.py  create_community_nodes.py  create_company_embeddings.py  create_description_embeddings.py  create_domain_embeddings.py  create_er_ground_truth.py  create_implicit_competitors.py  eda_company_communities.py  eda_company_communities_final.py  eda_company_communities_mcp.py  eda_company_communities_simple.py  enrich_company_properties.py  er_analyze_errors.py  er_competitor_threshold_analysis.py  er_evaluate_split.py  er_full_evaluation.py  er_ground_truth.py  er_precision_recall_curve.py  er_train_test_split.py  evaluate_er.py  explain_similarity.py  extract_business_relationships.py  extract_with_llm_verification.py  generate_community_summaries.py  health_check.py  label_er_with_ai.py  load_company_data.py  optimize_similarity_weights.py  pre-commit-gitleaks.sh  query_communities.py  (+7 more)
tests/: __init__.py  conftest.py
tools/: spot_check_reviewer.html
(+41 files in other folders)
