[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "domain-status-graph"
version = "0.1.0"
description = "A knowledge graph of domains and their technology stacks with Graph Data Science features"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "Alex Woolford", email = "alex@woolford.io"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
    "neo4j>=5.0.0",
    "graphdatascience>=1.0.0",
    "python-dotenv>=1.0.0",
    "openai>=1.0.0",
    "tqdm>=4.65.0",
    "numpy>=1.24.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pre-commit>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/alexwoolford/domain_status_graph"
Repository = "https://github.com/alexwoolford/domain_status_graph"
Issues = "https://github.com/alexwoolford/domain_status_graph/issues"

[tool.setuptools]
packages = ["domain_status_graph"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt"]

[tool.black]
line-length = 100
target-version = ['py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["domain_status_graph"]

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203"]  # Conflicts with Black's slice formatting

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
[[tool.mypy.overrides]]
module = [
    "neo4j.*",
    "graphdatascience.*",
    "openai.*",
    "tqdm.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=domain_status_graph --cov-report=term-missing --cov-report=xml"
markers = [
    "unit: Unit tests (fast, no external dependencies)",
    "integration: Integration tests (may require Neo4j, database, etc.)",
]
